Interfaz del login completa

--- a/assets/components/login/login.html
+++ b/assets/components/login/login.html
@@ -29,10 +29,10 @@
 </head>
 
 <body>
-    <div class="container">
-        <seccion class="container">
-            <img id="logo" class="col-md-5" src="./../../images/icono/pink/cleaner128.png">
-            <h1 id="titulo" class="col-md-7">Login</h1>
+    <div id="contenedor" class="container">
+        <seccion class="row">
+            <!-- <img id="logo" class="col-md-5" src="./../../images/icono/pink/cleaner128.png"> -->
+            <h1 id="titulo">Login</h1>
         </seccion>
 
         <seccion class="container">
