--- a/assets/components/home/home.html
+++ b/assets/components/home/home.html
@@ -1,76 +1,50 @@
 <!DOCTYPE html>
 <html>
-<!-- Inés Carazo Núñez -->
 
 <head>
-    <title>Login</title>
-    <meta charset="UTF-8">
-    <!-- Font cousine -->
-    <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
+    <title>Popat</title>
     <!--Fontawesome-->
-    <link href="./../../vendors/font-awesome/fonts/fontawesome-webfont.woff" rel="application/font-woff">
-    <link href="./../../vendors/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="./assets/vendors/font-awesome/fonts/fontawesome-webfont.woff" rel="application/font-woff">
+    <link href="./assets/vendors/font-awesome/css/font-awesome.css" rel="stylesheet">
+
     <!--CSS de Bootstrap -->
-    <link rel="stylesheet" href="./../../vendors/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/vendors/bootstrap/css/bootstrap.min.css" />
+
     <!--CSS propio-->
-    <link rel="stylesheet" type="text/css" href="./../../css/login.css">
-    <!-- <style>    
-    .affix {
-        top: 0;
-        width: 100%;
-        z-index: 9999 !important;
-        background-color: white;
-    }
-    
-    .affix+.container-fluid {
-        padding-top: 70px;
-    }
-</style> -->
+    <link rel="stylesheet" type="text/css" href="./../../css/home.css">
+
 </head>
 
 <body>
-    <div class="container">
-        <seccion class="container">
-            <img id="logo" class="col-md-5" src="./../../images/icono/pink/cleaner128.png">
-            <h1 id="titulo" class="col-md-7">Login</h1>
-        </seccion>
+    <!--Cabecera-->
+    <nav>
+        <ul class="pagination">
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+        </ul>
+    </nav>
+    <!--Slider-->
 
-        <seccion class="container">
-            <form id="formulario" action="/action_page.php">
-                <div class="form-group">
-                    <label for="usuario">Usuario:</label>
-                    <input type="text" class="form-control" id="usuario" placeholder="Introduce el usuario" name="usuario">
-                    <label for="pwd">Contraseña:</label>
-                    <input type="password" class="form-control" id="pwd" placeholder="Introduce la contraseña" name="pwd">
-                </div>
-                <!-- <div class="checkbox">
-                    <label><input type="checkbox" name="remember"> Remember me</label>
-                </div> -->
-                <button type="submit" class="btn btn-default">Aceptar</button>
-            </form>
 
-        </seccion>
+    <!--Categorias-->
 
-    </div>
-    <seccion id="footer" class="container">
-        <div>
-            <p>&copy;Inés Carazo Núñez 2019</p>
-            Icons made by
-            <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from
-            <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
-            <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-        </div>
-    </seccion>
+
+    <!--Contacto-->
+
+
+    <!--Footer-->
+
 </body>
-
 <footer>
     <!--jQuery-->
-    <script src="./../../vendors/jquery/jquery.min.js "></script>
+    <script src="./assets/vendors/jquery/jquery.min.js"></script>
     <!--Boostrap-->
-    <script src="./../../vendors/bootstrap/js/bootstrap.min.js "></script>
+    <script src="./assets/vendors/bootstrap/js/bootstrap.min.js"></script>
     <!--MainScripts-->
-    <script type="text/javascript " src="./../../js/main.js "></script>
-
+    <script type="text/javascript" src="./assets/js/main.js"></script>
 </footer>
 
 </html>
