Cambios en el slider

--- a/assets/components/blog_home/blog.html
+++ b/assets/components/blog_home/blog.html
@@ -112,8 +112,8 @@
     </nav>
 
     <!-- Slider -->
-    <div class="container-fluid">
-        <div id="slider" class="row">
+    <div class="container">
+        <div id="slider" class="col-md-8">
             <div class="container">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -121,20 +121,40 @@
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>
+                        <li data-target="#myCarousel" data-slide-to="5"></li>
+                        <li data-target="#myCarousel" data-slide-to="6"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="images/slider/panorama-2646143_1920.jpg" style="height: 427px;">
+                            <img src="./../../images/slider/flusflus.jpg">
                         </div>
 
                         <div class="item">
-                            <img src="images/slider/reef.jpg" style="height: 427px;">
+                            <img src="./../../images/slider/escobas.jpg">
                         </div>
 
                         <div class="item">
-                            <img src="images/slider/slider9.jpg" style="height: 427px;">
+                            <img src="./../../images/slider/cristales.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="./../../images/slider/grifo.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="./../../images/slider/lavadora.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="./../../images/slider/productos.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="./../../images/slider/seniorina.jpg">
                         </div>
                     </div>
 
