--- a/assets/components/login/login.html
+++ b/assets/components/login/login.html
@@ -29,38 +29,39 @@
 </head>
 
 <body>
-    <div id="contenedor" class="container">
-        <seccion class="row">
-            <!-- <img id="logo" class="col-md-5" src="./../../images/icono/pink/cleaner128.png"> -->
+    <div id="contenedor" class="container-fluid">
+        <section class="container">
+            <div class="col-md-offset-5 col-md-2">
+                <!-- <img id="logo" class="col-md-5" src="./../../images/icono/pink/cleaner128.png"> -->
             <h1 id="titulo">Login</h1>
-        </seccion>
+            </div>
+        </section>
 
-        <seccion class="container">
-            <form id="formulario" action="/action_page.php">
-                <div class="form-group">
-                    <label for="usuario">Usuario:</label>
-                    <input type="text" class="form-control" id="usuario" placeholder="Introduce el usuario" name="usuario">
-                    <label for="pwd">Contraseña:</label>
-                    <input type="password" class="form-control" id="pwd" placeholder="Introduce la contraseña" name="pwd">
-                </div>
-                <!-- <div class="checkbox">
-                    <label><input type="checkbox" name="remember"> Remember me</label>
-                </div> -->
-                <button type="submit" class="btn btn-default">Aceptar</button>
-            </form>
-
-        </seccion>
-
-    </div>
-    <seccion id="footer" class="container">
-        <div>
+        <section id="secForm" class="container">
+            <div class="col-md-offset-3 col-md-6">
+                <form id="formulario" action="/action_page.php">
+                    <div class="form-group">
+                        <label for="usuario">Usuario:</label>
+                        <input type="text" class="form-control" id="usuario" placeholder="Introduce el usuario" name="usuario">
+                        <label for="pwd">Contraseña:</label>
+                        <input type="password" class="form-control" id="pwd" placeholder="Introduce la contraseña" name="pwd">
+                    </div>
+                    <!-- <div class="checkbox">
+                        <label><input type="checkbox" name="remember"> Remember me</label>
+                    </div> -->
+                    <input type="submit" class="btn btn-default" value="Aceptar">
+                </form>
+            </div>
+        </section>
+    
+    <div id="footer" class="container-fluid">
             <p>&copy;Inés Carazo Núñez 2019</p>
             Icons made by
             <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from
             <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
             <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-        </div>
-    </seccion>
+    </div>
+</div>
 </body>
 
 <footer>
