Modificación en el diseño del login y del sign in

--- a/assets/components/login/login.html
+++ b/assets/components/login/login.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 // Inés Carazo Núñez
 require 'funciones/conexion.php';
 require 'funciones/funciones.php';
@@ -21,7 +21,7 @@ if (isset($_POST["iniciar"])) {
 } else {
     header("Location: http://localhost/repo/ONG/login.php");
 }
-?>
+?> -->
 <!DOCTYPE html>
 <html>
 <!-- Inés Carazo Núñez -->
@@ -45,7 +45,7 @@ if (isset($_POST["iniciar"])) {
         <section class="container">
             <div class="col-md-offset-5 col-md-2">
                 <!-- <img id="logo" class="col-md-5" src="./../../images/icono/pink/cleaner128.png"> -->
-            <h1 id="titulo">Login</h1>
+                <h1 id="titulo">Login</h1>
             </div>
         </section>
 
@@ -62,20 +62,20 @@ if (isset($_POST["iniciar"])) {
                         <label><input type="checkbox" name="remember"> Remember me</label>
                     </div> -->
                     <input type="submit" class="btn btn-default" value="Aceptar">
-                   
-                </form> 
-                <h4>¿Aún no eres cliente? <a href="./../sign_in/sign_in.html">REGÍSTRATE</a></h4>
+
+                </form>
+                <h4 class="text-center">¿Aún no eres cliente? <a href="./../sign_in/sign_in.html">REGÍSTRATE</a></h4>
             </div>
         </section>
-    
-    <div id="footer" class="container-fluid">
+
+        <div id="footer" class="container-fluid">
             <p>&copy;Inés Carazo Núñez 2019</p>
             Icons made by
             <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from
             <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
             <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+        </div>
     </div>
-</div>
 </body>
 
 <footer>
