--- a/assets/components/sign_in/sign_in.html
+++ b/assets/components/sign_in/sign_in.html
@@ -3,7 +3,7 @@
 <!-- Inés Carazo Núñez -->
 
 <head>
-    <title>SIGN IN</title>
+    <title>Sign in</title>
     <meta charset="UTF-8">
     <!-- Font cousine -->
     <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
@@ -15,13 +15,18 @@
     <!--CSS propio-->
     <link rel="stylesheet" type="text/css" href="./../../css/sign_in.css">
 </head>
+<!-- background-image: url(./../images/icono/light_pink/cleaner512.png);
+background-repeat: no-repeat;
+background-position-x: 47%;
+background-position-y: 49%;
+background-size: 34%; -->
 
 <body>
     <div id="contenedor" class="container-fluid">
         <section class="container">
             <div class="col-md-offset-3 col-md-6">
                 <!-- <img id="logo" class="col-md-5" src="./../../images/icono/pink/cleaner128.png"> -->
-            <h1 id="titulo">SIGN IN - NEW CLIENT</h1>
+                <h1 id="titulo">SIGN IN - NEW CLIENT</h1>
             </div>
         </section>
 
@@ -41,7 +46,7 @@
                         <input type="email" class="form-control" id="correo" placeholder="Introduce el correo" name="correo">
                         <label for="fnacimiento">Fecha de nacimiento:</label>
                         <input type="date" class="form-control" id="fnacimiento" name="fnacimiento">
-                        
+
                     </div>
                     <!-- <div class="checkbox">
                         <label><input type="checkbox" name="remember"> Remember me</label>
@@ -50,15 +55,15 @@
                 </form>
             </div>
         </section>
-    
-    <div id="footer" class="container-fluid">
+
+        <div id="footer" class="container-fluid">
             <p>&copy;Inés Carazo Núñez 2019</p>
             Icons made by
             <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from
             <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
             <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+        </div>
     </div>
-</div>
 </body>
 
 <footer>
