--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -101,7 +101,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a id="login" href="./../login/login.html">
+                        <a id="login" href="./../login_2/login_2.html">
                             <img src="./../../images/icono/login/login64.png">
                         </a>
                     </li>
@@ -112,345 +112,62 @@
     </nav>
 
     <!-- Slider -->
-    <div class="container">
-        <div id="slider" class="col-md-8">
-            <div class="container">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <li data-target="#myCarousel" data-slide-to="3"></li>
-                        <li data-target="#myCarousel" data-slide-to="4"></li>
-                        <li data-target="#myCarousel" data-slide-to="5"></li>
-                        <li data-target="#myCarousel" data-slide-to="6"></li>
-                    </ol>
+    <div class="container-fluid no-padding no-margin">
+        <div id="myCarousel" class="carousel slide no-margin no-padding" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
+            </ol>
 
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="./../../images/slider/flusflus.jpg">
-                        </div>
-
-                        <div class="item">
-                            <img src="./../../images/slider/escobas.jpg">
-                        </div>
-
-                        <div class="item">
-                            <img src="./../../images/slider/cristales.jpg">
-                        </div>
-
-                        <div class="item">
-                            <img src="./../../images/slider/grifo.jpg">
-                        </div>
-
-                        <div class="item">
-                            <img src="./../../images/slider/lavadora.jpg">
-                        </div>
-
-                        <div class="item">
-                            <img src="./../../images/slider/productos.jpg">
-                        </div>
-
-                        <div class="item">
-                            <img src="./../../images/slider/seniorina.jpg">
-                        </div>
-                    </div>
-
-                    <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="./../../images/slider/flusflus.jpg">
                 </div>
 
+                <div class="item">
+                    <img src="./../../images/slider/escobas.jpg">
+                </div>
+
+                <div class="item">
+                    <img src="./../../images/slider/cristales.jpg">
+                </div>
+
+                <div class="item">
+                    <img src="./../../images/slider/grifo.jpg">
+                </div>
+
+                <div class="item">
+                    <img src="./../../images/slider/lavadora.jpg">
+                </div>
+
+                <div class="item">
+                    <img src="./../../images/slider/productos.jpg">
+                </div>
             </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
-    <div class=" container alert alert-danger alert-dismissable">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong>¡Cuidado!</strong> Es muy importante que leas este mensaje de alerta.
-    </div>
 
-    <!-- breadcrumb -->
-    <!-- <div class="container">
-        <ol class="breadcrumb">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Galería</a></li>
-            <li class="active">Fotis</li>
-        </ol>
-    </div> -->
-
-    <!-- SECCION TEMAS -->
-    <!-- <section id="temas" class="container"> -->
-
-    <!-- Encabezado -->
-    <!-- <div class="row">
-            <div class="col-md-12 cabecera-seccion">
-                <h2>Temas de las fotografías</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut et dolore magna aliqua. Ut enim ad minim veniam</p>
-            </div>
-        </div> -->
-
-    <!-- TEMAS -->
-    <!-- <div class="row"> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema1" class="tema col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-gem"></i>
-                </div>
-                <div class="texto-tema col-md-10">
-                    <h4>Playa</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
-    <!-- boton leer más -->
-    <!-- <button type="button" class="btn btn-info">Leer más</button>
-                </div>
-
-            </div> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema2" class="tema col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-rainbow"></i>
-                </div>
-                <div class="texto-tema  col-md-10">
-                    <h4>Bosque</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
-    <!-- Enlace tipo boton leer mas -->
-    <!-- <a class="btn btn-info" href="#" role="button">Enlace</a>
-
-                </div> -->
-
-    <!-- </div> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema3" class="tema col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-landmark"></i>
-                </div>
-                <div class="texto-tema col-md-10">
-                    <h4>Campo</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    <button type="button" class="btn btn-info">Leer más</button>
-                </div>
-
-            </div> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema4" class="tema  col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-chain"></i>
-                </div>
-                <div class="texto-tema col-md-10">
-                    <h4>Ciudad</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <button type="button" class="btn btn-info">Leer más</button>
-
-                </div>
-            </div> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema5" class="tema  col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-cocktail"></i>
-                </div>
-                <div class="texto-tema col-md-10">
-                    <h4>Retrato</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <button type="button" class="btn btn-info">Leer más</button>
-                </div>
-
-            </div> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema6" class="tema  col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-address-card"></i>
-                </div>
-                <div class="texto-tema col-md-10">
-                    <h4>Noche</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <button type="button" class="btn btn-info">Leer más</button>
-                </div>
-
-            </div> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema7" class="tema  col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-sign"></i>
-                </div>
-                <div class="texto-tema col-md-10">
-                    <h4>Anuncios</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <button type="button" class="btn btn-info">Leer más</button>
-                </div>
-
-            </div> -->
-
-    <!-- TEMA-->
-    <!-- <div id="tema8" class="tema  col-sm-6 col-md-3">
-                <div class="icono-tema col-md-2">
-                    <i class="fa fa-photo"></i>
-                </div>
-                <div class="texto-tema col-md-10">
-                    <h4>Animales</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <button type="button" class="btn btn-info">Leer más</button>
-                </div>
-
-            </div>
-
-        </div>
-
-    </section> -->
-
-    <!-- SECCION GALERÍA -->
-    <!-- <section id="galeria" class="container"> -->
-
-    <!-- Encabezado -->
-    <!-- <div class="cabecera-seccion row">
-            <h2>GALERÍA</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut et dolore magna aliqua. Ut enim ad minim veniam</p>
-        </div>
-
-        <div class="row"> -->
-    <!-- galeria -->
-    <!-- 
-            <div class="col-md-3 col-sm-6 galeria">
-                <img src="./images/galeria/playa/coast-540123_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-
-                <h3><i class="fa fa-gem gal"></i>Playa</h3>
-            </div> -->
-    <!-- galeria -->
-    <!-- 
-            <div class="col-md-3 col-sm-6 galeria">
-                <img src="./images/galeria/bosque/green-1072828_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-rainbow gal"></i>Bosque</h3>
-            </div> -->
-    <!-- galeria -->
-
-    <!-- <div class="col-md-3 col-sm-6 galeria">
-                <img src="./images/galeria/campo/country-871445_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-landmark gal"></i>Campo</h3>
-            </div> -->
-
-    <!-- galeria -->
-
-    <!-- <div class="col-md-3 col-sm-6 galeria">
-                <img src="./images/galeria/ciudad/city-1209105_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-chain gal"></i>Ciudad</h3>
-            </div>
-        </div> -->
-
-    <!-- <div class="row"> -->
-    <!-- galeria -->
-
-    <!-- <div class="col-md-3 col-sm-6 galeria">
-                <img src="./images/galeria/retrato/child-817373_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-cocktail gal"></i>Retrato</h3>
-            </div> -->
-
-    <!-- galeria -->
-
-    <!-- <div class="col-md-3 col-sm-6 galeria">
-                <img src="./images/galeria/noche/city-89197_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-address-card gal"></i>Noche</h3>
-            </div> -->
-    <!-- galeria -->
-    <!-- 
-            <div class="col-md-3 col-sm-6 galeria">
-                <img src="./images/galeria/anuncios/mc-donalds-es-acusado-por-video-de-publicidad3-750x500-730x350.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-yen-sign gal"></i>Anuncios</h3>
-            </div> -->
-    <!-- galeria -->
-    <!-- <div class="col-md-3 col-sm-6 galeria">
-
-                <img src="./images//galeria/animales/elephant-2729415_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-
-                <h3><i class="fa fa-photo gal"></i>Animales</h3>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- <section class="container" id="buscador">
-        <div class="cabecera-seccion row">
-            <h2>RESULTADOS BÚSQUEDA</h2>
-        </div>
-         BUSCADOR -->
-    <!-- <div class="row"> -->
-
-    <!-- buscar -->
-
-    <!-- <div class="col-md-3 col-sm-6 buscar">
-                <img src="./images/galeria/playa/coast-540123_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-
-                <h3><i class="fa fa-gem gal"></i>Playa
-                    <div>
-                        <label>Puntuación</label>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                    <div>
-
-                    </div>
-                </h3>
-
-            </div> -->
-    <!-- buscar -->
-    <!-- 
-            <div class="col-md-3 col-sm-6 buscar">
-                <img src="./images/galeria/bosque/green-1072828_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-rainbow gal"></i>Bosque
-                    <div>
-                        <label>Puntuación</label>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                </h3>
-
-            </div> -->
-    <!-- buscar -->
-
-    <!-- <div class="col-md-3 col-sm-6 buscar">
-                <img src="./images/galeria/campo/country-871445_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-                <h3><i class="fa fa-landmark gal"></i>Campo
-                    <div>
-                        <label>Puntuación</label>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                    </div>
-                </h3>
-            </div> -->
-
-    <!-- buscar -->
-
-    <!-- <div class="col-md-3 col-sm-6 buscar">
-        <img src="./images/galeria/ciudad/city-1209105_1920.jpg" alt="slider" class="img-thumbnail img-responsive">
-        <h3><i class="fa fa-chain gal"></i>Ciudad
-            <div>
-                <h3>Puntuación</h3>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-            </div>
-        </h3>
-    </div>
-
-
-    </div>
-
-    </section> -->
+    <!-- SECCION relleno -->
+    <section id="relleno" class="container">
+        <h1 class="text-center">AÑADIR CONTENIDO AQUÍ</h1>
+    </section>
+    <!-- SECCION relleno -->
 
     <!--SECCION contactofaq -->
     <section class="container" id="contactofaq">
