--- a/ProyectoNetbeans/assets/components/sign_in_2/sign_in_2.html
+++ b/ProyectoNetbeans/assets/components/sign_in_2/sign_in_2.html
@@ -3,7 +3,7 @@
 <!-- Inés Carazo Núñez -->
 
 <head>
-    <title>Sign in</title>
+    <title>Login</title>
     <meta charset="UTF-8">
     <!-- Font cousine -->
     <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
@@ -13,46 +13,54 @@
     <!--CSS de Bootstrap -->
     <link rel="stylesheet" href="./../../vendors/bootstrap/css/bootstrap.min.css" />
     <!--CSS propio-->
-    <link rel="stylesheet" type="text/css" href="./../../css/sign_in.css">
+    <link rel="stylesheet" type="text/css" href="./../../css/sign_in_2.css">
 </head>
 
 <body>
-    <div id="contenedor" class="container-fluid">
-        <section class="container">
-            <div class="col-md-offset-3 col-md-6">
-                <h1 id="titulo">SIGN IN - NEW CLIENT</h1>
-            </div>
-        </section>
 
-        <section id="secForm" class="container">
-            <div class="col-md-offset-3 col-md-6">
-                <form id="formulario" action="/action_page.php">
+    <div class="sidenav">
+        <img class="center-block" src="./../../images/icono/white/cleaner256.png">
+        <div class="login-main-text">
+            <h2 class="text-center text-uppercase">chacha chachi</h2>
+        </div>
+    </div>
+    <div class="main no-margin no-padding">
+        <div class="col-md-8 col-sm-12  no-margin no-padding">
+            <div class="login-form  no-margin no-padding">
+                <form>
+                    <h2 class="text-center text-uppercase">SIGN IN - NEW CLIENT</h2>
                     <div class="form-group">
                         <label for="usuario">Usuario:</label>
                         <input type="text" class="form-control" id="usuario" placeholder="Introduce el usuario" name="usuario">
+                    </div>
+                    <div class="form-group">
                         <label for="pwd">Contraseña:</label>
                         <input type="password" class="form-control" id="pwd" placeholder="Introduce la contraseña" name="pwd">
+                    </div>
+                    <div class="form-group">
                         <label for="nombre">Nombre:</label>
                         <input type="text" class="form-control" id="nombre" placeholder="Introduce el nombre" name="nombre">
+
+                    </div>
+                    <div class="form-group">
                         <label for="apellido">Apellido:</label>
                         <input type="text" class="form-control" id="apellido" placeholder="Introduce el apellido" name="apellido">
+
+                    </div>
+                    <div class="form-group">
                         <label for="correo">Correo:</label>
                         <input type="email" class="form-control" id="correo" placeholder="Introduce el correo" name="correo">
+
+                    </div>
+                    <div class="form-group">
                         <label for="fnacimiento">Fecha de nacimiento:</label>
                         <input type="date" class="form-control" id="fnacimiento" name="fnacimiento">
 
                     </div>
-                    <input type="submit" class="btn btn-default" value="Confirmar">
+                    <button id="boton" type="submit" class="btn btn-black">Login</button>
+
                 </form>
             </div>
-        </section>
-
-        <div id="footer" class="container-fluid">
-            <p>&copy;Inés Carazo Núñez 2019</p>
-            Icons made by
-            <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from
-            <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
-            <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
         </div>
     </div>
 </body>
@@ -64,6 +72,7 @@
     <script src="./../../vendors/bootstrap/js/bootstrap.min.js "></script>
     <!--MainScripts-->
     <script type="text/javascript " src="./../../js/main.js "></script>
+
 </footer>
 
 </html>
