--- a/ProyectoNetbeans/assets/css/home.css
+++ b/ProyectoNetbeans/assets/css/home.css
@@ -1,5 +1,3 @@
-/*   Inés Carazo Núñez  */
-
 * {
     font-family: 'Cousine';
 }
@@ -47,7 +45,7 @@ a:focus {
 
 
 /* ---------------------------------------------------
-    SIDEBAR STYLE
+  SIDEBAR STYLE
 ----------------------------------------------------- */
 
 .wrapper {
@@ -92,7 +90,7 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #f71958;
+    color: #f7dbe3;
     background: #fff;
 }
 
@@ -112,6 +110,7 @@ a[aria-expanded="true"]::before {
     display: block;
     position: absolute;
     right: 20px;
+    font-family: 'Glyphicons Halflings';
     font-size: 0.6em;
 }
 
@@ -139,7 +138,7 @@ ul.CTAs a {
 
 
 /* ---------------------------------------------------
-    CONTENT STYLE
+  CONTENT STYLE
 ----------------------------------------------------- */
 
 #content {
@@ -184,7 +183,7 @@ ul.CTAs a {
 
 
 /* ---------------------------------------------------
-    MEDIAQUERIES
+  MEDIAQUERIES
 ----------------------------------------------------- */
 
 @media (max-width: 768px) {
