El filtro en el login falla

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -101,7 +101,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a id="login" href="./../login_2/login_2.php">
+                        <a id="login" href="./../login/login.php">
                             <img src="./../../images/icono/login/login64.png">
                         </a>
                     </li>
