modificar el menú de la página de gestión

--- a/ProyectoNetbeans/assets/components/home/home.html
+++ b/ProyectoNetbeans/assets/components/home/home.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Gestión</title>
     <!-- Font cousine -->
     <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
@@ -26,27 +27,23 @@
             <ul class="list-unstyled components">
                 <p>Dummy Heading</p>
                 <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li><a href="#">Home 1</a></li>
-                        <li><a href="#">Home 2</a></li>
-                        <li><a href="#">Home 3</a></li>
-                    </ul>
+                    <a href="#homeSubmenu" aria-expanded="false">Home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Gestión</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li><a href="#">Page 1</a></li>
-                        <li><a href="#">Page 2</a></li>
-                        <li><a href="#">Page 3</a></li>
+                        <li><a href="#">Empleados</a></li>
+                        <li><a href="#">Clientes</a></li>
+                        <li><a href="#">Casas</a></li>
+                        <li><a href="#">Tareas</a></li>
+                        <li><a href="#">Pagos</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Portfolio</a>
+                    <a href="#">Contacto</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Cerrar sesión</a>
                 </li>
             </ul>
 
