--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -89,15 +89,17 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#sobrenosotros">Sobre nosotros</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Servicios <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#tema1">Cocina</a></li>
-                            <li><a href="#tema2">Baño</a></li>
+                            <li><a href="#servicios">Limpieza de casa</a></li>
+                            <li><a href="#servicios">Limpieza en mudanzas</a></li>
                         </ul>
                     </li>
-                    <li><a href="#galeria">Galería</a></li>
-                    <li><a href="#contactofaq">Conacto y FAQ</a></li>
+                    <!-- <li><a href="#galeria">Galería</a></li> -->
+                    <li><a href="#seccontact">Contacto</a></li>
+                    <li><a href="#faq">FAQS</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -121,16 +123,11 @@
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
                 <li data-target="#myCarousel" data-slide-to="4"></li>
-                <li data-target="#myCarousel" data-slide-to="5"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./../../images/slider/flusflus.jpg">
-                </div>
-
-                <div class="item">
                     <img src="./../../images/slider/escobas.jpg">
                 </div>
 
@@ -163,23 +160,57 @@
         </div>
     </div>
 
-    <!-- SECCION relleno -->
-    <section id="relleno" class="container">
-        <h1 class="text-center">AÑADIR CONTENIDO AQUÍ</h1>
-    </section>
-    <!-- SECCION relleno -->
-
-    <!--SECCION contactofaq -->
-    <section class="container" id="contactofaq">
+    <!-- SECCION sobre nosotros -->
+    <section id="sobrenosotros" class="container no-margin no-padding">
         <div class="row">
-            <div id="contacto" class="col-md-6">
-                <h3 class="text-center">Contacto</h3>
+            <img src="./../../images/sobrenosotros/mitadsofa.jpg" class="col-md-6">
+            <div id="sntexto" class="col-md-6">
+                <h2 class="text-center text-uppercase">SERVICIOS DE <span class="chachi">CHACHI</span>LIMPIEZA</h2>
+
+                <h3 class="text-center">LIMPIAMOS TU CASA POR TI</h3>
+                <p>Imagínese volver a casa después de un largo día a un lugar limpio, ordenado y acogedor. Chacha Chachi está aquí para hacer ese sueño realidad. Como una empresa líder en la industria que ha brindado servicios confiables de limpieza de la
+                    casa desde 2018, Sabemos que tus necesidades son únicas. Por eso nos tomamos el tiempo de ofrecer servicios que se ajustan a su presupuesto, sus preferencias de limpieza y su ocupado estilo de vida.</p>
+            </div>
+        </div>
+    </section>
+    <!-- SECCION sobre nosotros -->
+
+    <!-- SECCION servicios -->
+    <section id="servicios" class="container-FLUID no-margin no-padding">
+        <!-- <h1 class="text-center">AÑADIR CONTENIDO AQUÍ</h1> -->
+        <div class="row">
+            <div id="casa" class="col-md-6">
+                <img src="./../../images/servicios/sala.jpg" class="col-md-12">
+                <div class="overlay1">
+                    <div class="text1">
+                        <h3>Limpieza de casas</h3>
+                    </div>
+                </div>
+            </div>
+            <div id="mudanza" class="col-md-6">
+                <img src="./../../images/servicios/openHouse.jpg" class="col-md-12">
+                <div class="overlay2">
+                    <div class="text2">
+                        <h3>Limpieza en mudanzas</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- SECCION servicios -->
+
+    <!--SECCION contacto -->
+    <section id="seccontact" class="container">
+        <div id="contacto" class="row">
+            <div class="col-md-6">
+                <h3 class="text-center text-uppercase">Contacto</h3>
 
                 <div class="contenedor">
                     <form action="#">
                         <div class="row">
                             <label class="col-md-3">Nombre</label>
-                            <input type="text" id="name" class="col-md-9" name="firstname" placeholder="escribe tu nombre">
+                            <input type="text" id="name" class="col-md-9" name="firstname" placeholder="Escribe tu nombre">
                         </div>
                         <div class="row">
                             <label class="col-md-3">Correo</label>
@@ -196,55 +227,64 @@
                         </div>
                         <div class="row">
                             <label class="col-md-3">Comentario</label>
-                            <textarea id="subject" class="col-md-9" name="subject" placeholder="escribe aquí"></textarea>
+                            <textarea id="subject" class="col-md-9" name="subject" placeholder="Escribe aquí"></textarea>
                         </div>
-                        <input type="submit" value="Enviar">
+                        <div class="row">
+                            <input type="submit" value="Enviar">
+                        </div>
+
                     </form>
                 </div>
             </div>
-
-            <div id="faq" class="col-md-6">
-                <h3 class="text-center">FAQ</h3>
-                <div class="panel-group">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" href="#collapse1">Do you deliver every image you shoot?</a>
-                            </h4>
-                        </div>
-                        <div id="collapse1" class="panel-collapse collapse">
-                            <h4>No, we do not. We eliminate duplicate images, test shots, missed focused shots, shots with bad expressions and other images that may dilute the overall product delivery. For example, because we shoot with low apertures, sometimes
-                                we take a few extra shots to make sure we have the perfect focus. We don’t expect you to have the expertise or the time to zoom into each image to select the one with the sharpest focus, so we spend hours doing that on
-                                our end. In another example, candid laughs and emotional tears are some of the best images from the day. Unfortunately, they can also yield some unflattering facial expressions. We might snap a few extras of any of these
-                                moments to make sure we have a great shot with the ideal expression for the moment. With our expertise of processing millions of images each year, we may eliminate ones that we feel are duplicates and only deliver the best
-                                one.
-                            </h4>
-                            <div class="panel-footer"></div>
-                        </div>
-
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" href="#collapse2">Do you deliver every image you shoot?</a>
-                            </h4>
-                        </div>
-                        <div id="collapse2" class="panel-collapse collapse">
-                            <h4>No, we do not. We eliminate duplicate images, test shots, missed focused shots, shots with bad expressions and other images that may dilute the overall product delivery. For example, because we shoot with low apertures, sometimes
-                                we take a few extra shots to make sure we have the perfect focus. We don’t expect you to have the expertise or the time to zoom into each image to select the one with the sharpest focus, so we spend hours doing that on
-                                our end. In another example, candid laughs and emotional tears are some of the best images from the day. Unfortunately, they can also yield some unflattering facial expressions. We might snap a few extras of any of these
-                                moments to make sure we have a great shot with the ideal expression for the moment. With our expertise of processing millions of images each year, we may eliminate ones that we feel are duplicates and only deliver the best
-                                one.
-                            </h4>
-                            <div class="panel-footer"></div>
-                        </div>
-
-                    </div>
-
+            <div class="col-md-6">
+                <h4 class="text-center text-uppercase">Ubicación</h4>
+                <div id="map-container-google" class="z-depth-1-half map-container">
+                    <iframe src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
+        </div>
     </section>
-
+    <!--SECCION contacto -->
+    <!--SECCION faq -->
+    <section id="faq" class="container">
+        <div class="row">
+            <h3 class="text-center text-uppercase">Preguntas frecuentes</h3>
+            <h4 class="text-center">Respuestas a nuestras preguntas más comunes</h4>
+            <p>Chacha Chachi está comprometida con la completa satisfacción de sus clientes, razón por la cual nos esforzamos por ofrecer los servicios de limpieza de su hogar más confiables y asequibles. Nuestro equipo de profesionales ha respondido algunas
+                de las preguntas más frecuentes.</p>
+            <p class="text-center"><span class="chachi">¿Tiene una pregunta específica?</span> Rellene nuestro formulario de <a class="chachi" href="#contacto">contacto</a></p>
+            <div class="panel-group">
+                <div class="panel panel-default row">
+                    <div class="panel-heading col-md-6">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#collapse1">¿Porque debería confiar en Chacha Chachi?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse col-md-6">
+                        <h4>
+                            Estamos orgullosos de ofrecer servicios de limpieza profesional y empleamos a amas de llaves residenciales que se enorgullecen de ofrecer servicios de alta calidad. Después de someterse a una exhaustiva verificación de antecedentes, cada miembro de nuestro
+                            equipo está completamente capacitado en cada paso de nuestros planes de limpieza detallados. También respaldamos todo nuestro trabajo con una garantía de 24 horas. Estas son solo algunas de las muchas razones por las que los
+                            clientes confían en Molly Maid.</h4>
+                        <div class="panel-footer"></div>
+                    </div>
+                </div>
+                <div class="panel panel-default row">
+                    <div class="panel-heading col-md-6">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#collapse2">¿A quién contrata Chacha Chachi para limpiar mi casa?</a>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse col-md-6">
+                        <h4>Puede estar seguro de que todos nuestros profesionales de limpieza están totalmente capacitados y asegurados. Respetamos a todos nuestros clientes al nunca fumar, beber, comer o usar electrodomésticos durante las limpiezas de la
+                            casa. Usamos nuestros uniformes reconocidos nacionalmente con orgullo y con confianza llevamos a cabo servicios que superan las expectativas. También nos entrenamos regularmente para asegurarnos de estar siempre al día con
+                            las últimas y mejores técnicas de limpieza. Para mayor seguridad y tranquilidad, el trabajo que realizamos para cada cliente es responsabilizado por un supervisor confiable y experimentado.</h4>
+                        <div class="panel-footer"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--SECCION faq -->
 
     <!-- SECCION PIE -->
     <footer id="footer" class="container-fluid">
@@ -273,11 +313,6 @@
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-github"></i></a></li>
                     </ul>
-                </div>
-            </div>
-            <div class="col-dm-12">
-                <div id="map-container-google" class="z-depth-1-half map-container">
-                    <iframe src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
