BBDD modificada, diseño del registro de empleados hecho

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -176,20 +176,20 @@
     <!-- SECCION sobre nosotros -->
 
     <!-- SECCION servicios -->
-    <section id="servicios" class="container-FLUID no-margin no-padding">
+    <section id="servicios" class="container-fluid no-margin no-padding">
         <!-- <h1 class="text-center">AÑADIR CONTENIDO AQUÍ</h1> -->
         <div class="row">
-            <div id="casa" class="col-md-6">
-                <img src="./../../images/servicios/sala.jpg" class="col-md-12">
-                <div class="overlay1">
+            <div id="casa" class="col-md-6 no-margin no-padding">
+                <img src="./../../images/servicios/sala.jpg" class="col-md-12 no-margin no-padding">
+                <div class="overlay1 no-margin no-padding">
                     <div class="text1">
                         <h3>Limpieza de casas</h3>
                     </div>
                 </div>
             </div>
-            <div id="mudanza" class="col-md-6">
-                <img src="./../../images/servicios/openHouse.jpg" class="col-md-12">
-                <div class="overlay2">
+            <div id="mudanza" class="col-md-6 no-margin no-padding">
+                <img src="./../../images/servicios/openHouse.jpg" class="col-md-12 no-margin no-padding">
+                <div class="overlay2 no-margin no-padding">
                     <div class="text2">
                         <h3>Limpieza en mudanzas</h3>
                     </div>
