--- a/ProyectoNetbeans/assets/css/blog_home.css
+++ b/ProyectoNetbeans/assets/css/blog_home.css
@@ -207,7 +207,7 @@
         }
         
         .buscar h3 div {
-            width: 505;
+            width: 505px;
         }
         /*BUSCADOR*/
         /* SERVICIOS */
@@ -215,6 +215,11 @@
         #servicios {
             padding-top: 15%;
             padding-bottom: 15%;
+        }
+        
+        #servicios img {
+            height: 500px;
+            width: auto;
         }
         
         .overlay1,
@@ -250,7 +255,7 @@
         /* SOBRE NOSOTROS */
         
         #sobrenosotros {
-            padding-top: 15%;
+            padding-top: 5%;
             padding-bottom: 15%;
         }
         
